--- a/style.css
+++ b/style.css
@@ -248,7 +248,9 @@ p {
 }
 @media (min-width:480px) {
 	.bs-docs-featurette .img-responsive {
-		margin-top: 30px
+		margin-top: 30px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 }
 @media (min-width:768px) {
@@ -265,7 +267,9 @@ p {
 		margin-left: auto
 	}
 	.bs-docs-featurette .img-responsive {
-		margin-top: 0
+		margin-top: 0;
+		margin-right: auto;
+		margin-left: auto;
 	}
 }
 :hover>.anchorjs-link {
