--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
 	color: #fff!important;
+	-webkit-user-select: none;
+	user-select: none;
 }
 html {
 	font-family: sans-serif;
@@ -24,10 +26,6 @@ img {
 	border: 0
 }
 @media print {
-	*, :after, :before {
-		color: #000!important;
-		background: 0 0!important;
-	}
 	a, a:visited {
 		text-decoration: underline
 	}
@@ -74,7 +72,7 @@ img {
 }
 .img-responsive {
 	display: block;
-	max-width: 100%;
+	width: -webkit-fill-available;
 	height: auto
 }
 h2 {
@@ -141,10 +139,6 @@ p {
 	font-size: 14px;
 	line-height: 1.42857143;
 	border-radius: 4px;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none
 }
 .btn:active:focus, .btn:focus {
 	outline: 5px auto -webkit-focus-ring-color;
