--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ img {
 }
 .img-responsive {
 	display: block;
-	width: -webkit-fill-available;
+	max-width: auto;
 	height: auto
 }
 h2 {
@@ -220,6 +220,9 @@ p {
 	.bs-docs-masthead .lead {
 		font-size: 24px
 	}
+	.img-responsive {
+		width: -webkit-fill-available;
+	}
 }
 @media (min-width:992px) {
 	.bs-docs-masthead .lead {
@@ -246,6 +249,9 @@ p {
 		margin-right: auto;
 		margin-left: auto;
 	}
+	.img-responsive {
+		width: -webkit-fill-available;
+	}
 }
 @media (min-width:768px) {
 	.bs-docs-featurette {
@@ -264,6 +270,9 @@ p {
 		margin-top: 0;
 		margin-right: auto;
 		margin-left: auto;
+	}
+	.img-responsive {
+		width: -webkit-fill-available;
 	}
 }
 :hover>.anchorjs-link {
