--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ p {
 	.bs-docs-masthead .lead {
 		font-size: 24px
 	}
-	.img-responsive {
+	.bs-docs-masthead .img-responsive {
 		width: -webkit-fill-available;
 	}
 }
@@ -248,8 +248,6 @@ p {
 		margin-top: 30px;
 		margin-right: auto;
 		margin-left: auto;
-	}
-	.img-responsive {
 		width: -webkit-fill-available;
 	}
 }
@@ -270,8 +268,6 @@ p {
 		margin-top: 0;
 		margin-right: auto;
 		margin-left: auto;
-	}
-	.img-responsive {
 		width: -webkit-fill-available;
 	}
 }
