--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ img {
 	min-width: inherit;
 	height: inherit;
 }
+.bs-docs-featurette .img-responsive {
+	margin-top: 30px;
+	margin-right: auto;
+	margin-left: auto;
+	width: inherit;
+	height: inherit;
+}
+.img-responsive {
+	width: inherit;
+}
 h2 {
 	font-family: inherit;
 	font-weight: 500;
