--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
 	height: 284px!important;
 	width: 254px!important;
 }
+[alt="AIMPBlack"]{
+	height: 547px!important;
+	width: 407px!important;
+}
 html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
