--- a/style.css
+++ b/style.css
@@ -230,10 +230,6 @@ p {
 	font-size: 20px;
 }
 @media (min-width:425px) {
-	.bs-docs-masthead .img-responsive {
-		width: -webkit-fill-available;
-		height: -webkit-fill-available;
-	}
 	.img-responsive {
 		width: -webkit-fill-available!important;
 	}
@@ -244,6 +240,9 @@ p {
 	}
 	.bs-docs-masthead .lead {
 		font-size: 24px
+	}
+	.img-responsive {
+		width: auto!important;
 	}
 }
 @media (width:1024px) {
