--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ img {
 	margin-top: 30px;
 	margin-right: auto;
 	margin-left: auto;
+	padding-bottom: 20px !important;
 }
 h2 {
 	font-family: inherit;
