create ExCDN, lol

--- a/blacktheme/Blackord.theme.css
+++ b/blacktheme/Blackord.theme.css
@@ -1,2 +1,3 @@
 //META{"name":"Blackord","description":"Абсолютная чёрная тема для клиента Discord","author":"ExeWire","version":"0.1.0","authorId":"610914331760132249","invite":"5AXyXjm","website":"https://exewire.github.io/blacktheme","source":"https://raw.githubusercontent.com/exewire/exewire.github.io/master/blacktheme/BlackDiscord.theme.css"}*//{}
 @import url(https://exewire.github.io/blacktheme/discord.css);
+@import url(https://exewire.github.io/excdn/googlefont.css);
